changes to the banner and container

--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 </head>
 <body>
     <div class="app-container">
-        <div class="theme-toggle">
-            <button id="theme-toggle-btn">
-                <i class="fas fa-moon"></i>
-            </button>
+        <div class="banner">
+            <p>Stay Focused</p>
         </div>
         <div id="focus-modal" class="modal">
             <div class="modal-content">
@@ -24,7 +22,6 @@
         </div>
         <div class="main-container">
             <div class="timer-section">
-                <h1>Pomodoro Timer</h1>
                 <div class="mode-toggle">
                     <button id="work-mode" class="mode-button active">
                         <i class="fas fa-laptop-code"></i>
